--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="main.css" />
   </head>
   <body>
     <div class="container">
@@ -167,6 +167,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="js/main.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
